titles for sponsor/eighth widgets, max-width to prevent overlap

--- a/intranet/static/css/dashboard.widgets.css
+++ b/intranet/static/css/dashboard.widgets.css
@@ -180,6 +180,15 @@
     padding: 0 4px;
 }
 
+.block-header .block-letter-date {
+    max-width: 106px;
+    overflow: hidden;
+    display: inline-block;
+    text-overflow: ellipsis;
+    height: 30px;
+    white-space: nowrap;
+}
+
 .block-signup,
 .block-sponsorship {
     position: absolute;
